-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs21
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2210014 | 7 | Tom Rodriguez | P3 | Closed | Fixed | b143 |
compiler/6910605/Test.java
;; Using jvm: "/export/local/common/jdk/baseline/solaris-sparcv9/jre/lib/sparcv9/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt/P1/B/054833.kvn/source/src/cpu/sparc/vm/templateInterpreter_sparc.cpp:1751), pid=25746, tid=22
# assert(locals<caller->fp() || locals> (caller->fp() + 16)) failed: locals in save area
#
# JRE version: 7.0-b140
# Java VM: Java HotSpot(TM) 64-Bit Server VM (21.0-b11-internal-201105050548.kvn.7042070-fastdebug compiled mode solaris-sparc compressed oops)
# Core dump written. Default location: /export/local/49626.JDK7.NIGHTLY.VM+solaris-sparcv9_javase_server_comp_JT_HS/results/workDir/compiler/6910605/Test/core or core.25746
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000000100e46800): JavaThread "MainThread" [_thread_in_Java, id=22, stack(0xffffffff4f200000,0xffffffff4f300000)]
Stack: [0xffffffff4f200000,0xffffffff4f300000], sp=0xffffffff4f2fb980, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x123bb24] void VMError::report_and_die()+0x794;; void VMError::report_and_die()+0x794
V [libjvm.so+0x6ea140] void report_vm_error(const char*,int,const char*,const char*)+0x78;; void report_vm_error(const char*,int,const char*,const char*)+0x78
V [libjvm.so+0x113df88] int AbstractInterpreter::layout_activation(methodOop,int,int,int,int,int,frame*,frame*,bool)+0x5b8;; int AbstractInterpreter::layout_activation(methodOop,int,int,int,int,int,frame*,frame*,bool)+0x5b8
V [libjvm.so+0x122e22c] void vframeArrayElement::unpack_on_stack(int,int,frame*,bool,int)+0x61c;; void vframeArrayElement::unpack_on_stack(int,int,frame*,bool,int)+0x61c
V [libjvm.so+0x122f398] void vframeArray::unpack_to_stack(frame&,int)+0x308;; void vframeArray::unpack_to_stack(frame&,int)+0x308
V [libjvm.so+0x7025f0] BasicType Deoptimization::unpack_frames(JavaThread*,int)+0x188;; BasicType Deoptimization::unpack_frames(JavaThread*,int)+0x188
v ~DeoptimizationBlob
[error occurred during error reporting (printing native stack), id 0xe0000000]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~DeoptimizationBlob
[error occurred during error reporting (printing Java stack), id 0xe0000000]
;; Using jvm: "/export/local/common/jdk/baseline/solaris-sparcv9/jre/lib/sparcv9/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt/P1/B/054833.kvn/source/src/cpu/sparc/vm/templateInterpreter_sparc.cpp:1751), pid=25746, tid=22
# assert(locals<caller->fp() || locals> (caller->fp() + 16)) failed: locals in save area
#
# JRE version: 7.0-b140
# Java VM: Java HotSpot(TM) 64-Bit Server VM (21.0-b11-internal-201105050548.kvn.7042070-fastdebug compiled mode solaris-sparc compressed oops)
# Core dump written. Default location: /export/local/49626.JDK7.NIGHTLY.VM+solaris-sparcv9_javase_server_comp_JT_HS/results/workDir/compiler/6910605/Test/core or core.25746
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000000100e46800): JavaThread "MainThread" [_thread_in_Java, id=22, stack(0xffffffff4f200000,0xffffffff4f300000)]
Stack: [0xffffffff4f200000,0xffffffff4f300000], sp=0xffffffff4f2fb980, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x123bb24] void VMError::report_and_die()+0x794;; void VMError::report_and_die()+0x794
V [libjvm.so+0x6ea140] void report_vm_error(const char*,int,const char*,const char*)+0x78;; void report_vm_error(const char*,int,const char*,const char*)+0x78
V [libjvm.so+0x113df88] int AbstractInterpreter::layout_activation(methodOop,int,int,int,int,int,frame*,frame*,bool)+0x5b8;; int AbstractInterpreter::layout_activation(methodOop,int,int,int,int,int,frame*,frame*,bool)+0x5b8
V [libjvm.so+0x122e22c] void vframeArrayElement::unpack_on_stack(int,int,frame*,bool,int)+0x61c;; void vframeArrayElement::unpack_on_stack(int,int,frame*,bool,int)+0x61c
V [libjvm.so+0x122f398] void vframeArray::unpack_to_stack(frame&,int)+0x308;; void vframeArray::unpack_to_stack(frame&,int)+0x308
V [libjvm.so+0x7025f0] BasicType Deoptimization::unpack_frames(JavaThread*,int)+0x188;; BasicType Deoptimization::unpack_frames(JavaThread*,int)+0x188
v ~DeoptimizationBlob
[error occurred during error reporting (printing native stack), id 0xe0000000]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~DeoptimizationBlob
[error occurred during error reporting (printing Java stack), id 0xe0000000]
- backported by
-
JDK-2210014 assert(locals < caller->fp() || locals > (caller->fp() + 16)) failed: locals in save area
-
- Closed
-
- relates to
-
JDK-7009361 JSR 292 Invalid value on stack on solaris-sparc with -Xcomp
-
- Closed
-