7043301: assert(locals < caller->fp() || locals > (caller->fp() + 16)) failed: locals in save area

Reviewed-by: kvn