hotspot/src/share/vm/runtime/frame.hpp
@@ -511,7 +511,7 @@ class FrameValues {
   // Used by frame functions to describe locations.
   void describe(int owner, intptr_t* location, const char* description, int priority = 0);
 
-  bool validate();
+  void validate();
   void print();
 };
 
